# pfd

./: Makefile  pyoxidizer.bzl  setup.cfg  setup.py
.github/workflows/: build.yml
src/: runner.py
src/pfd/: __main__.py
