[metadata]
name = pfd

[options]
package_dir=
    =src
packages = find:
install_requires =
    appdirs
    attrs
    argcomplete
    httpx
    InquirerPy
    keyring
    pydantic
    rich
    setuptools_scm
    # python-dateutil>=2.8.0,<3.0.0
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.9
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    pfd = pfd.__main__:main

[options.packages.find]
where=src

[flake8]
exclude = docs
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
mccabe-complexity = 13
flake8-ignore =
	docs/conf.py ALL
	E203 E501 W503
flake8-max-line-length = 120

[pycodestyle]
max_line_length = 120

[isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = True

[mypy]
plugins = pydantic.mypy
ignore_missing_imports = True
no_error_summary = True
junit_xml = junit-mypy.xml
warn_redundant_casts = True

[mypy-src.pf.*]
follow_imports = silent
strict_optional = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True

# for strict mypy: (this is the tricky one :-))
; disallow_untyped_defs = True
